cambio random desafío6

--- a/index.html
+++ b/index.html
@@ -176,6 +176,6 @@
        <h6 style="text-align: center ;">&copy 2018 Cuppon Latam .Todos los derechos reservados.
        </h6>
    </div>
-
+cambio random para desafío final AVD 2022
 </body>
 </html>
